Revision history for File-Unpack

0.39    jw, Wed Apr  6 18:25:26 CEST 2011
	Try /._\d?/ name suffixes on collisions to avoid _fu_* directories if possible.
	Added _chmod_add() to help creating readable files and executable directories.
	Raised default maxfilesize from 100M to 2.5G, honors FILE_UNPACK_MAXFILESIZE too.

0.38	Both File::LibMagic and File::MimeInfo::Magic fail on .info files.
	We now ask perl -T and return application/x-text-mixed in that case.
	Fixed comparison with RLIM_INFINITY, silencing false warnings.

0.37	Fixed setrlimit() calls, to not explode, when the limit is already lower.
	Minor cleanup.

0.36	removed dependency on lsof, in favour of /proc and builtin
        _children_fuser(). tick-tick now shows the percentage of the fastest moving fd.

0.35	tick-tick now shows file offsets via crude lsof.
        tested with gcc-ejc, parsing lsof output with $u->run() during $u->run(). Yeah!

0.34	jw, Thu Mar 24 09:24:42 CET 2011
	Libmagic perl module explodes with malformed utf8, assert LC_ALL=C. 

0.33	jw, Fri Mar 11 18:04:09 CET 2011
	run() untaint argv0. needed for running helpers under -T
	Empty file is text/x-empty now. not application/x-empty.

0.32	jw, Thu Mar 10 01:52:53 CET 2011
	Fixed setlimit code, to be more robust.
	Fixed logfile JSON syntax, with a dummy Element in the epilog.
	Added 06-logfile.t to test the logfile syntax.

0.31	jw, Wed Mar  9 00:01:50 CET 2011
	Added list() method.
	Spellchecked pod.

0.30 	jw, Fri Nov 19 19:13:53 CET 2010
	Run through perlcritic.
        Switch back to gz to help smoke testers
        (walde.christian@googlemail.com)

0.29	jw, Tue Dec 14 23:19:02 CET 2010
	Mention /usr/bin/file_unpack in perldoc

0.28	jw, Fri Oct 22 14:29:09 CEST 2010
	Look only at files and dirs, ignore special files.
	Reading a pipe could block us endlessly.

0.27	jw, Sat Sep 11 22:01:49 CEST 2010
	new feature in mime(): attempt full file access
	not only if flm reports currupt, but also when it reports