@@ -26,29 +26,29 @@
 
 # --- MakeMaker const_config section:
 
-# These definitions are from config.sh (via /usr/lib/perl5/5.12.1/i586-linux-thread-multi/Config.pm).
+# These definitions are from config.sh (via /usr/lib/perl5/5.12.1/x86_64-linux-thread-multi/Config.pm).
 # They may have been overridden via Makefile.PL or on the command line.
 AR = ar
 CC = cc
 CCCDLFLAGS = -fPIC
-CCDLFLAGS = -Wl,-E -Wl,-rpath,/usr/lib/perl5/5.12.1/i586-linux-thread-multi/CORE
+CCDLFLAGS = -Wl,-E -Wl,-rpath,/usr/lib/perl5/5.12.1/x86_64-linux-thread-multi/CORE
 DLEXT = so
 DLSRC = dl_dlopen.xs
 EXE_EXT = 
 FULL_AR = /usr/bin/ar
 LD = cc
-LDDLFLAGS = -shared -fomit-frame-pointer -fmessage-length=0 -O2 -Wall -D_FORTIFY_SOURCE=2 -fstack-protector -funwind-tables -fasynchronous-unwind-tables -g -Wall -pipe
-LDFLAGS =  -fstack-protector
-LIBC = /lib/libc-2.11.2.so
+LDDLFLAGS = -shared -L/usr/local/lib64 -fstack-protector
+LDFLAGS =  -L/usr/local/lib64 -fstack-protector
+LIBC = /lib64/libc-2.11.2.so
 LIB_EXT = .a
 OBJ_EXT = .o
 OSNAME = linux
 OSVERS = 2.6.32
 RANLIB = :
 SITELIBEXP = /usr/lib/perl5/site_perl/5.12.1
-SITEARCHEXP = /usr/lib/perl5/site_perl/5.12.1/i586-linux-thread-multi
+SITEARCHEXP = /usr/lib/perl5/site_perl/5.12.1/x86_64-linux-thread-multi
 SO = so
-VENDORARCHEXP = /usr/lib/perl5/vendor_perl/5.12.1/i586-linux-thread-multi
+VENDORARCHEXP = /usr/lib/perl5/vendor_perl/5.12.1/x86_64-linux-thread-multi
 VENDORLIBEXP = /usr/lib/perl5/vendor_perl/5.12.1
 
 
@@ -85,11 +85,11 @@ INSTALLSITELIB = /usr/lib/perl5/site_perl/5.12.1
 DESTINSTALLSITELIB = $(DESTDIR)$(INSTALLSITELIB)
 INSTALLVENDORLIB = /usr/lib/perl5/vendor_perl/5.12.1
 DESTINSTALLVENDORLIB = $(DESTDIR)$(INSTALLVENDORLIB)
-INSTALLARCHLIB = /usr/lib/perl5/5.12.1/i586-linux-thread-multi
+INSTALLARCHLIB = /usr/lib/perl5/5.12.1/x86_64-linux-thread-multi
 DESTINSTALLARCHLIB = $(DESTDIR)$(INSTALLARCHLIB)
-INSTALLSITEARCH = /usr/lib/perl5/site_perl/5.12.1/i586-linux-thread-multi
+INSTALLSITEARCH = /usr/lib/perl5/site_perl/5.12.1/x86_64-linux-thread-multi
 DESTINSTALLSITEARCH = $(DESTDIR)$(INSTALLSITEARCH)
-INSTALLVENDORARCH = /usr/lib/perl5/vendor_perl/5.12.1/i586-linux-thread-multi
+INSTALLVENDORARCH = /usr/lib/perl5/vendor_perl/5.12.1/x86_64-linux-thread-multi
 DESTINSTALLVENDORARCH = $(DESTDIR)$(INSTALLVENDORARCH)
 INSTALLBIN = /usr/bin
 DESTINSTALLBIN = $(DESTDIR)$(INSTALLBIN)
@@ -116,13 +116,13 @@ DESTINSTALLSITEMAN3DIR = $(DESTDIR)$(INSTALLSITEMAN3DIR)
 INSTALLVENDORMAN3DIR = /usr/share/man/man3
 DESTINSTALLVENDORMAN3DIR = $(DESTDIR)$(INSTALLVENDORMAN3DIR)
 PERL_LIB = /usr/lib/perl5/5.12.1
-PERL_ARCHLIB = /usr/lib/perl5/5.12.1/i586-linux-thread-multi
+PERL_ARCHLIB = /usr/lib/perl5/5.12.1/x86_64-linux-thread-multi
 LIBPERL_A = libperl.a
 FIRST_MAKEFILE = Makefile
 MAKEFILE_OLD = Makefile.old
 MAKE_APERL_FILE = Makefile.aperl
 PERLMAINCC = $(CC)
-PERL_INC = /usr/lib/perl5/5.12.1/i586-linux-thread-multi/CORE
+PERL_INC = /usr/lib/perl5/5.12.1/x86_64-linux-thread-multi/CORE
 PERL = /usr/bin/perl
 FULLPERL = /usr/bin/perl
 ABSPERL = $(PERL)
@@ -185,10 +185,13 @@ PERL_ARCHIVE_AFTER =
 
 
 TO_INST_PM = Unpack.pm \
+	bz.pl \
 	children_fuser.pl \
 	file_unpack.pl
 
-PM_TO_BLIB = file_unpack.pl \
+PM_TO_BLIB = bz.pl \
+	$(INST_LIB)/File/bz.pl \
+	file_unpack.pl \
 	$(INST_LIB)/File/file_unpack.pl \
 	Unpack.pm \
 	$(INST_LIB)/File/Unpack.pm \
@@ -839,7 +842,7 @@ ppd :
 	$(NOECHO) $(ECHO) '        <REQUIRE NAME="Pod::Usage" />' >> $(DISTNAME).ppd
 	$(NOECHO) $(ECHO) '        <REQUIRE NAME="String::ShellQuote" />' >> $(DISTNAME).ppd
 	$(NOECHO) $(ECHO) '        <REQUIRE NAME="Text::Sprintf::Named" />' >> $(DISTNAME).ppd
-	$(NOECHO) $(ECHO) '        <ARCHITECTURE NAME="i586-linux-thread-multi-5.12" />' >> $(DISTNAME).ppd
+	$(NOECHO) $(ECHO) '        <ARCHITECTURE NAME="x86_64-linux-thread-multi-5.12" />' >> $(DISTNAME).ppd
 	$(NOECHO) $(ECHO) '        <CODEBASE HREF="" />' >> $(DISTNAME).ppd
 	$(NOECHO) $(ECHO) '    </IMPLEMENTATION>' >> $(DISTNAME).ppd
 	$(NOECHO) $(ECHO) '</SOFTPKG>' >> $(DISTNAME).ppd
@@ -849,6 +852,7 @@ ppd :
 
 pm_to_blib : $(FIRST_MAKEFILE) $(TO_INST_PM)
 	$(NOECHO) $(ABSPERLRUN) -MExtUtils::Install -e 'pm_to_blib({@ARGV}, '\''$(INST_LIB)/auto'\'', q[$(PM_FILTER)], '\''$(PERM_DIR)'\'')' -- \
+	  bz.pl $(INST_LIB)/File/bz.pl \
 	  file_unpack.pl $(INST_LIB)/File/file_unpack.pl \
 	  Unpack.pm $(INST_LIB)/File/Unpack.pm \
 	  children_fuser.pl $(INST_LIB)/File/children_fuser.pl 
